상세페이지 네브바 수정

--- a/src/main/resources/templates/product.mustache
+++ b/src/main/resources/templates/product.mustache
@@ -11,9 +11,9 @@
     </div>
     <div>
         <ul id="navbar">
-            <li><a class="active" href="/">Home</a></li>
+            <li><a href="/">Home</a></li>
 
-            <li><a>Shop</a>
+            <li><a class="active">Shop</a>
                 <div class="sub-bar">
                     <ul>
                         <li><a href="/brands/romanticcrown">ROMANTIC CLOWN</a></li>
