--- a/src/main/resources/templates/product.mustache
+++ b/src/main/resources/templates/product.mustache
@@ -7,7 +7,7 @@
 <section id="header">
     <a href="/"><img src="/img/logo.png" class="logo" alt="" width=150px></a>
     <div class="index-header-icon">
-        <i class="fa-solid fa-arrow-left" onClick="history.go(-1)"></i>
+        <a href="/" id="indexhome"><i class="fa-solid fa-house"></i></a>
     </div>
     <div>
         <ul id="navbar">
@@ -40,6 +40,9 @@
 
             <a href="#" id="close"><i class="fa-solid fa-xmark"></i></a>
         </ul>
+    </div>
+    <div id="indextab">
+        <i id="bar" class="fa-solid fa-bars"></i>
     </div>
 </section>
 
