--- a/src/main/resources/templates/product.mustache
+++ b/src/main/resources/templates/product.mustache
@@ -1,6 +1,7 @@
 {{>layout/head}}
 {{>layout/js/shop-highlights}}
 <link rel="stylesheet" href="/css/jquery.alert.min.css">
+<link rel="stylesheet" href="/css/shop.css">
 
 </head>
 <body>
