상세페이지

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -419,6 +419,7 @@ footer .copyright{
 #prodetails{
     display: flex;
     margin-top: 20px;
+    justify-content: center;
 }
 
 #prodetails .single-pro-details{
