--- a/src/main/resources/templates/foryou.mustache
+++ b/src/main/resources/templates/foryou.mustache
@@ -13,7 +13,7 @@
     </div>
     <div>
         <ul id="navbar">
-            <li><a class="active" href="/">Home</a></li>
+            <li><a href="/">Home</a></li>
 
             <li><a>Shop</a>
                 <div class="sub-bar">
@@ -28,7 +28,7 @@
             </li>
 
             <li><a href="/html/arfitting.html">AR Fitting</a></li>
-            <li><a href="/foryou">For You</a></li>
+            <li><a class="active" href="/foryou">For You</a></li>
             <li><a href="/html/about.html">About</a></li>
 
             <li id="loginicon"><a><i class="fa-solid fa-user"></i></a>
