--- a/src/main/resources/templates/product.mustache
+++ b/src/main/resources/templates/product.mustache
@@ -179,42 +179,42 @@
             </tr>
             {{/reviews}}
             <tr>
-                <td class="num">4</td>
-                <td class="thumb"><a href="product.html"><img src="file:///Users/daeun/Projects/ResponsiveWeb/img/products/n1.jpg" width="50px" height="50px" alt=""><span>상품명 ex.awesome t-shirts</span></a></td>
+                <td class="num"> </td>
+                <td class="thumb"><a href="product.html"><img src="{{product.mainImage}}" width="50px" height="50px" alt=""><span>{{product.name}}</span></a></td>
                 <td class="subject">
                     <a href="review_detail.html" style="color:#555555;">사이즈 잘 맞고 예뻐요</a>
                 </td>
-                <td class="writer">닉네임4</td>
+                <td class="writer">강다일</td>
                 <td class="txtLess ">2022-08-02</td>
                 <td class="txtLess ">223</td>
             </tr>
             <tr>
-                <td class="num">3</td>
-                <td class="thumb"><a href="product.html"><img src="file:///Users/daeun/Projects/ResponsiveWeb/img/products/n1.jpg" width="50px" height="50px" alt=""><span>상품명 ex.awesome t-shirts</span></a></td>
+                <td class="num"> </td>
+                <td class="thumb"><a href="product.html"><img src="{{product.mainImage}}" width="50px" height="50px" alt=""><span>{{product.name}}</span></a></td>
                 <td class="subject">
                     <a href="review_detail.html" style="color:#555555;">친구 선물로 사줬는데 엄청 좋아해요!</a>
                 </td>
-                <td class="writer">닉네임3</td>
+                <td class="writer">김다은</td>
                 <td class="txtLess ">2022-08-02</td>
                 <td class="txtLess ">252</td>
             </tr>
             <tr>
-                <td class="num">2</td>
-                <td class="thumb"><a href="product.html"><img src="file:///Users/daeun/Projects/ResponsiveWeb/img/products/n1.jpg" width="50px" height="50px" alt=""><span>상품명 ex.awesome t-shirts</span></a></td>
+                <td class="num"> </td>
+                <td class="thumb"><a href="product.html"><img src="{{product.mainImage}}" width="50px" height="50px" alt=""><span>{{product.name}}</span></a></td>
                 <td class="subject">
                     <a href="review_detail.html" style="color:#555555;">후기</a>
                 </td>
-                <td class="writer">닉네임2</td>
+                <td class="writer">이수민</td>
                 <td class="txtLess ">2022-08-02</td>
                 <td class="txtLess ">197</td>
             </tr>
             <tr>
-                <td class="num">1</td>
-                <td class="thumb"><a href="product.html"><img src="file:///Users/daeun/Projects/ResponsiveWeb/img/products/n1.jpg" width="50px" height="50px" alt=""><span>상품명 ex.awesome t-shirts</span></a></td>
+                <td class="num"> </td>
+                <td class="thumb"><a href="product.html"><img src="{{product.mainImage}}" width="50px" height="50px" alt=""><span>{{product.name}}</span></a></td>
                 <td class="subject">
                     <a href="review_detail.html" style="color:#555555;">만족해요</a>
                 </td>
-                <td class="writer">닉네임1</td>
+                <td class="writer">이현희</td>
                 <td class="txtLess ">2022-08-02</td>
                 <td class="txtLess ">88</td>
             </tr>
