--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -651,15 +651,21 @@ footer .copyright{
 }
 
 #review {
+margin-top: 5%;
 margin-bottom: 70px;
 }
 
 #review h2 {
-
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 28px;
+    font-weight: 600;
     align-items: center;
+    letter-spacing: 1px;
     justify-content: center;
     display: flex;
     border-bottom: double;
+    margin-bottom: 20px;
 }
 #review .ReviewList {
     width: 100%;
@@ -844,7 +850,6 @@ padding: 0;
     float: right;
 
 }
-
 
 /* ar피팅 화면 */
 #arfit-logo{
@@ -1071,6 +1076,165 @@ padding: 0;
 #login-area .contentBx .formBx .scl li img{
     justify-content: center;
 }
+
+/* search area */
+#search-area .contentBx .formBx {
+    text-align: center;
+}
+
+#search-area .contentBx .tableBx {
+    margin-top: 2%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    height: 200px;
+    width: 50%;
+    overflow: auto;
+    overflow-y:scroll;
+}
+
+
+#search-area .contentBx .tableBx .sizetable{
+    display: inline-block;
+    font-size: 20px;
+    text-align: center;
+    color: #111;
+    font-weight: 500;
+    border: 1px solid #083c81;
+    border-collapse: collapse;
+}
+
+
+#search-area .contentBx .tableBx .sizetable td{
+    font-size: 20px;
+    text-align: center;
+    color: #111;
+    font-weight: 300;
+    border: 1px solid #083c81;
+    padding: 10px;
+}
+
+#search-area .contentBx .tableBx .sizetable th{
+    border: 1px solid #083c81;
+    padding: 10px;
+    width: 10%
+}
+
+#search-area .contentBx .tableBx .sizetable tr{
+    line-height: 3rem;
+}
+
+#search-area .contentBx .formBx span{
+    margin-bottom: 50px;
+}
+
+#search-area .contentBx .formBx .inputBx{
+    display: inline-block;
+    margin-bottom: 2%;
+    margin-left: 20%;
+    margin-right: 20%;
+}
+
+#search-area .contentBx .formBx h2{
+    font-size: 20px;
+    margin-bottom: 30px;
+    text-align: center;
+    color: #111;
+    font-weight: 600;
+    letter-spacing: 1px;
+}
+
+#search-area .contentBx .formBx .inputBx span{
+    font-size: 16px;
+    margin-bottom: 5px;
+    display: inline-block;
+    color: #222;
+    font-weight: 300;
+    letter-spacing: 1px;
+    margin-right: 1%;
+}
+
+#search-area .contentBx .formBx .inputBx input[type="text"]{
+    width: 25%;
+    padding: 10px 10px;
+    outline: none;
+    font-weight: 400;
+    border: 1px solid #083c81;
+    font-size: 16px;
+    letter-spacing: 1px;
+    color: #222;
+    background: transparent;
+    margin-right: 3%;
+    /*
+    border-radius: 20px;
+    */
+}
+
+#search-area .contentBx .formBx .inputBx input[type="submit"]{
+    width: 17%;
+    padding: 10px 10px;
+    outline: none;
+    font-weight: 400;
+    border: 1px solid #083c81;
+    font-size: 16px;
+    letter-spacing: 1px;
+    color: #222;
+    background: #083c81;
+    color: #fff;
+    outline: none;
+    border: none;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+#search-area .contentBx .formBx .inputBx input[type="submit"]:hover{
+    background: #0a4ba0;
+}
+
+#search-area .contentBx .formBx .remember{
+    margin-bottom: 10px;
+    color: #575757;
+    font-weight: 400;
+    font-size: 14px;
+}
+
+#search-area .contentBx .formBx .inputBx p{
+    color: #575757;
+}
+
+#search-area .contentBx .formBx .inputBx p a{
+    color: #083c81;
+}
+
+#search-area .contentBx .formBx h4{
+    color: #222;
+    text-align: center;
+    margin: 40px 0 10px;
+    font-weight: 500;
+}
+
+
+#search-area .contentBx .formBx .scl{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+
+}
+
+#search-area .contentBx .formBx .scl li{
+    list-style: none;
+    cursor: pointer;
+    justify-content: center;
+
+}
+
+#search-area .contentBx .formBx .scl li img{
+    justify-content: center;
+}
+
+
 
 /* Sign Up Page */
 
