--- a/src/main/resources/templates/product.mustache
+++ b/src/main/resources/templates/product.mustache
@@ -143,12 +143,41 @@
     </div>
     {{/details}}
 </section>
-<section>
-    <hr />
-    <h1>만족도,,,</h1>
-    {{#satisfactions}}
-        <h5>{{size}}({{sizeSatisfaction}}) ----- {{rate}}% (구매 {{count}})</h5>
-    {{/satisfactions}}
+
+<section id="search-area">
+    <div class="contentBx" id="size-satisfaction">
+        <div class="formBx">
+            <h2>체형별 사이즈 만족도</h2>
+            {{#sizevalue}}
+                <span>전체 체형에 대한 결과 값 입니다.</span>
+            {{/sizevalue}}
+            <form id="sizeForm" action="/findsize/{{productNo}}" method="POST">
+                <div class="inputBx">
+                    <span>키 :  </span>
+                    <input type="text" name="height" value="{{#heightvalue}}{{heightvalue}}{{/heightvalue}}"/>
+                    <span>몸무게 :  </span>
+                    <input type="text" name="weight" value="{{#weightvalue}}{{weightvalue}}{{/weightvalue}}"/>
+                    <input class="size_Btn" type="submit" value="확인" />
+                </div>
+            </form>
+        </div>
+        <div class="tableBx">
+            <table class="sizetable">
+                <tr>
+                    <th>사이즈</th>
+                    <th>평가</th>
+                    <th>비율</th>
+                </tr>
+                {{#satisfactions}}
+                    <tr>
+                        <td>{{size}}</td>
+                        <td>{{sizeSatisfaction}}</td>
+                        <td>{{rate}}%</td>
+                    </tr>
+                {{/satisfactions}}
+            </table>
+        </div>
+    </div>
 </section>
 
 <section id="review" class="section-p1">
@@ -157,7 +186,7 @@
         <table>
             <thead>
             <tr>
-                <th style="width:7%;" scope="col"> 번호</th>
+                <th style="width:7%;" scope="col"></th>
                 <th style="width:22%;" scope="col" class="thumb">상품정보</th>
                 <th style="width:auto;" scope="col">제목</th>
                 <th style="width:15%;" scope="col">작성자</th>
